# radiant

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
schematics/lampa/: _autosave-lampa.sch  lampa  lampa-cache.lib  lampa.kicad_pcb  lampa.kicad_pcb-bak  lampa.kicad_prl  lampa.kicad_pro  lampa.kicad_sch  lampa.net  lampa.pro  lampa.sch  lampa.xml
schematics/lampa/assembly/: lampa-BOM.csv  lampa-footprint-positions.csv
schematics/lampa/gerber/: lampa-B_Cu.gbr  lampa-B_Mask.gbr  lampa-B_Paste.gbr  lampa-B_SilkS.gbr  lampa-Edge_Cuts.gbr  lampa-F_Cu.gbr  lampa-F_Mask.gbr  lampa-F_Paste.gbr  lampa-F_SilkS.gbr  lampa-In1_Cu.gbr  lampa-In2_Cu.gbr  lampa-NPTH.drl  lampa-PTH.drl
src/: dummy_pin.rs  gui.rs  lib.rs  main.rs  peripherals.rs  xpt2046.rs
