[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["VersBinarii <versbinarii@gmail.com>"]
name = "radiant"
edition = "2018"
version = "0.1.0"

[lib]
harness = false

[dependencies]
cortex-m = "0.7.6"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-rtic = "1.1.3"
embedded-hal = "=1.0.0-alpha.7"
bme280 = "0.4.4"
ili9341 = { path = "../ili9341-rs"}
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"
xpt2046 = {version = "0.3", features = ["with_defmt"]}
heapless = "0.7.16"

# TODO(4) enter your HAL here
# some-hal = "1.2.3"
[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["rt","stm32f411"]

[dev-dependencies]
defmt-test = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = 'false'
opt-level = 3 # <-
overflow-checks = false # <-
